[package]
name = "tenlang"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "^0.19.8" }

[dependencies]
clap = "3.2.15"
itertools = "0.10.3"
lalrpop-util = { version = "^0.19.8", features = ["lexer"] }
regex = "1"
uuid = { version = "1.1.2", features = ["v4"] }
