[package]
name = "monoteny"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "^0.19.8" }

[dependencies]
clap = "3.2.15"
custom_error = "1.9.2"
guard = "0.5.1"
itertools = "0.10.3"
lalrpop-util = { version = "^0.19.8", features = ["lexer"] }
regex = "1"
replace_with = "0.1.7"
strum = { version = "0.24.1", features = ["derive"] }
try_map = "0.3.1"
uuid = { version = "1.1.2", features = ["v4"] }
monoteny-macro = { path = "macro" }
log = "0.4.17"
lazy_static = "1.4.0"
colored = "2.0.4"
