[package]
name = "monoteny"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.20.2" }

[dependencies]
clap = "4.5.4"
custom_error = "1.9.2"
itertools = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
regex = "1"
replace_with = "0.1.7"
strum = { version = "0.26.2", features = ["derive"] }
try_map = "0.3.1"
uuid = { version = "1.1.2", features = ["v4"] }
monoteny-macro = { path = "macro" }
log = "0.4.17"
lazy_static = "1.4.0"
colored = "2.0.4"
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.6"
display_with_options = "0.1.0"
